10 add interactive map with kebab information to admin panel (#32)
* added a leaflet map

* map now displays pins placed at kebab locations, pins can display details about kebabs

* added comments placeholder to kebabpanel

* request path update

* reduced code redundancy, show more button now opens kebab panel

* made index route protected

* fixed isfirstlogin not getting a token, made navbar disappear when not logged in

* fixed kebab list height

* typo fix in swagger docs

* fixed route to kebab comments

* corrected the paths in kebab section of swagger docs

* added a route to get a user by id, added docs

* comments now return user data, display changes

* changed comment layout, added deleting comments

* adjusted summary styles for kebab panel

* changed route for getting informations about user

changed route for getting informations about user to match route from all users
also now this route is required to have admin role

* changed get kebabs comments

changed get kebabs comments to not give sensitive informations

* added additional informations to get user comments

now get user comments gives same informations as get kebab comments

* added admin/user indicator, adjusted kebab panel to look better on smaller devices

---------
